--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@popperjs/core": "^2.11.8",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
+    "choices.js": "^11.1.0",
     "graph-modal": "^1.0.7",
     "graph-tabs": "^1.0.2",
     "inputmask": "^5.0.8",
