--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "gulpfile.js",
   "type": "module",
   "scripts": {
-    "stylelint": "npx stylelint **/*.scss",
     "style-fix": "npx stylelint **/*.scss --fix",
-    "code": "editorconfig-checker",
     "dev": "gulp",
-    "build": "npm run stylelint && npm run code && gulp build --build",
+    "build": "gulp build --build",
     "cache": "gulp cache",
     "backend": "gulp backend",
     "zip": "gulp zip --build"
