--- a/package.json
+++ b/package.json
@@ -58,11 +58,13 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
     "choices.js": "^11.1.0",
+    "fs": "^0.0.1-security",
     "graph-modal": "^1.0.7",
     "graph-tabs": "^1.0.2",
     "inputmask": "^5.0.8",
     "jquery": "^3.7.1",
     "just-validate": "^4.3.0",
+    "path": "^0.12.7",
     "rellax": "^1.12.1",
     "simplebar": "^6.2.5",
     "swiped-events": "^1.1.9",
