--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "inputmask": "^5.0.8",
     "jquery": "^3.7.1",
     "just-validate": "^4.3.0",
+    "nouislider": "^15.8.1",
     "path": "^0.12.7",
     "rellax": "^1.12.1",
     "simplebar": "^6.2.5",
