--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "rellax": "^1.12.1",
     "simplebar": "^6.2.5",
     "swiped-events": "^1.1.9",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "wnumb": "^1.2.0"
   }
 }
